...
        },
        leadingIcon = { leadingIcon?.invoke() },
        trailingIcon = {
            if (label == "Senha" || label == "Confirmar Senha"){
                Icon(
                    imageVector = if (passwordVisible) Icons.Default.VisibilityOff else Icons.Default.Visibility,
                    contentDescription = "Toggle Password Visibility",
                    modifier = Modifier.clickable {
                        passwordVisible = !passwordVisible
                    }
                )
            }

...
